--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+    
+    
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "pg": "^8.8.0"
   },
   "devDependencies": {
+    "browser-sync": "^3.0.4",
     "nodemon": "^3.1.0"
   }
 }
